Refactor chatbox and typebox components for improved UI and functionality
- Updated chatbox styles to use a linear gradient background instead of an image.
- Adjusted typebox styles for better responsiveness and visual appeal.
- Enhanced file upload handling in typebox, including improved state management and user feedback.
- Implemented auto-submit for media messages upon upload completion.
- Refined event handling for outside clicks to close upload options.
- Improved accessibility and usability of the typebox with better placeholder text and button interactions.

--- a/src/app/auth/login/page.module.css
+++ b/src/app/auth/login/page.module.css
@@ -24,8 +24,6 @@
 }
 
 .login_form_cn{
-    max-height: 80vh;
-    height: 80vh;
     display: flex;
     align-items: flex-end;
     padding-inline: 60px 120px; 
@@ -46,6 +44,7 @@
 
 .gray{
     color: var(--gray);
+    margin-top: -10px;
 }
 
 .switch{
@@ -68,6 +67,7 @@
 .ca_btn{
     font-size: 0.9rem;
     padding-block: 10px;
+    margin-top: 10px;
     border-radius: 4px;
 }
 
