--- a/src/components/chatbox.module.css
+++ b/src/components/chatbox.module.css
@@ -2,7 +2,7 @@
 .chat_main{
     height: 100vh;
     min-width: 300px;
-    background-image: url("/chat-bgr.jpg");
+    background: linear-gradient(180deg, rgba(6, 12, 25, 0.8) 0%, rgba(2, 8, 23, 0.4) 100%);;
     background-size: cover;
     background-size: 50%;
     position: relative;
@@ -20,8 +20,8 @@
     width: 100%;
     position: relative;
     z-index: 20;
-    background-color: rgb(12, 12, 12);
     box-shadow: 0px 5px 10px 0px rgba(19, 19, 19, 0.8);
+    background: linear-gradient(180deg, rgba(6, 12, 25, 0.8) 0%, rgba(2, 8, 23, 0.4) 100%);
     color: white;
 }
 
@@ -162,14 +162,12 @@
     top: 38%;
     left: 50%;
     transform: translateX(-50%);
-
-    font-size: clamp(1rem, 2vw, 3rem);
+    font-size: 1.3rem;
     font-weight: 400;
     text-align: center;
-
-    background-color: white;
-    border: 4px solid var(--button-color);
-    box-shadow: 0px 10px 20px 0px black;
+    color: rgb(241, 241, 241);
+    background: linear-gradient(180deg, rgba(6, 12, 25, 0.8) 0%, rgba(2, 8, 23, 0.4) 100%);
+    box-shadow: 0px 3px 26px -4px #329998eb;
     padding-block: clamp(10px, 1vw, 30px);
     padding-inline: clamp(10px, 1vw, 30px);
     border-radius: 20px;
@@ -302,7 +300,7 @@
 
 @media (max-width: 500px) {
     .chat_main{
-        height: 92vh;
+        height: 100vh;
     }
     .curr_chat_main{
         height: 78%;
